--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -214,6 +214,11 @@ header .navbar-expand-lg .navbar-nav > li .inner-submenu, header .navbar-expand-
   left: 50%;
   transform: translateX(-40%);
 }
+@media (min-width: 992px) and (max-width: 1336px) {
+  header .navbar-expand-lg .navbar-nav > li .inner-submenu, header .navbar-expand-lg .navbar-nav > li .submenu-wrapper {
+    width: 60%;
+  }
+}
 @media screen and (max-width: 991px) {
   header .navbar-expand-lg .navbar-nav > li .inner-submenu, header .navbar-expand-lg .navbar-nav > li .submenu-wrapper {
     position: unset;
@@ -259,6 +264,11 @@ header .navbar-expand-lg .navbar-nav > li .submenu a {
   display: flex;
   padding: 15px 20px;
   width: 45%;
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  header .navbar-expand-lg .navbar-nav > li .submenu a {
+    width: 48%;
+  }
 }
 @media screen and (max-width: 991px) {
   header .navbar-expand-lg .navbar-nav > li .submenu a {
@@ -367,11 +377,21 @@ header .navbar-expand-lg .navbar-nav > li .inner-submenu {
   transform: unset;
   left: unset;
 }
+@media (min-width: 992px) and (max-width: 1199px) {
+  header .navbar-expand-lg .navbar-nav > li .inner-submenu {
+    width: 52%;
+  }
+}
 header .navbar-expand-lg .navbar-nav > li .inner-submenu a {
   width: 100%;
   display: flex;
   flex-direction: column;
   border-left: 1px solid transparent;
+}
+@media (min-width: 1200px) and (max-width: 1335px) {
+  header .navbar-expand-lg .navbar-nav > li .inner-submenu a {
+    width: 89%;
+  }
 }
 header .navbar-expand-lg .navbar-nav > li .inner-submenu a:hover {
   background: rgba(0, 75, 75, 0.5);
@@ -668,4 +688,15 @@ header .fz_sigin ul .unlock a:hover svg path {
   transform: translateX(-42.6%);
   border: 1px solid #143941;
   border-radius: 5px;
+}
+@media screen and (max-width: 1199px) {
+  #menu-blur-bg {
+    width: 60%;
+    left: 51.5%;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1335px) {
+  #menu-blur-bg {
+    width: 53%;
+  }
 }
