--- a/assets/css/products_list.css
+++ b/assets/css/products_list.css
@@ -234,11 +234,16 @@ section {
   padding: 1px;
   overflow: hidden;
 }
+@media screen and (max-width: 1199px) {
+  #fz_product_list_feature .product_list_feature_cards .product_list_feature_card {
+    border: none;
+    padding: 0;
+  }
+}
 @media screen and (max-width: 991px) {
   #fz_product_list_feature .product_list_feature_cards .product_list_feature_card {
     margin: 30px 10px;
-    border: none;
-    padding: 0;
+    border-radius: 16px;
   }
 }
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card:nth-child(4) {
@@ -284,7 +289,7 @@ section {
     will-change: filter, transform;
   }
 }
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 1199px) {
   #fz_product_list_feature .product_list_feature_cards .product_list_feature_card::before {
     display: none;
   }
@@ -303,8 +308,8 @@ section {
 }
 @media screen and (max-width: 1199px) {
   #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont {
-    padding: 30px 30px 30px 20px;
-    border-radius: 8px;
+    padding: 30px 20px 30px 20px;
+    border-radius: 16px;
   }
 }
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont img, #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont svg {
@@ -315,9 +320,10 @@ section {
 }
 @media screen and (max-width: 1199px) {
   #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont img, #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont svg {
-    height: 35px;
+    position: relative;
     right: 0%;
-    width: 20%;
+    width: 60px;
+    margin-bottom: 8px;
   }
 }
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont h4 {
@@ -432,8 +438,9 @@ section {
 }
 @media (max-width: 991px) {
   .fz_features_sec button .fz_feature_tab_heading svg {
+    min-width: 20px;
     width: 20px;
-    height: 20px;
+    height: auto;
   }
 }
 .fz_features_sec button .fz_feature_tab_heading h4 {
@@ -452,7 +459,7 @@ section {
     padding-top: 10px;
     padding-left: 0px;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 22px;
     font-weight: 500;
   }
 }
