--- a/assets/css/sass/header.scss
+++ b/assets/css/sass/header.scss
@@ -226,6 +226,10 @@ header {
           width: 50%;
           left: 50%;
           transform: translateX(-40%);
+          
+          @media (min-width: 992px) and (max-width: 1336px) {
+           width:60%;
+        }
           @media screen and (max-width: 991px) {
             position: unset;
             width: 100% !important;
@@ -272,8 +276,13 @@ header {
             display: flex;
             padding: 15px 20px;
             width: 45%;
+
+            @media (min-width: 992px) and (max-width: 1199px) {
+             width:48%;
+         }
             @media screen and (max-width: 991px) {
               width: 100%;
+
             }
           }
           li {
@@ -386,11 +395,17 @@ header {
           right: 0;
           transform: unset;
           left: unset;
+          @media (min-width: 992px) and (max-width: 1199px) {
+           width: 52%;
+        }
           a {
             width: 100%;
             display: flex;
             flex-direction: column;
             border-left: 1px solid transparent;
+            @media (min-width: 1200px) and (max-width: 1335px) {
+              width: 89%;
+           }
             &:hover {
               background: rgba(0, 75, 75, 0.5);
               border-left: 1px solid rgba(1, 251, 251, 0.202);
@@ -747,4 +762,13 @@ header {
   transform: translateX(-42.6%);
   border: 1px solid #143941;
   border-radius: 5px;
+
+  @media screen and (max-width: 1199px) {
+    width:60%;
+    left:51.5%;
+  }
+
+  @media (min-width: 1200px) and (max-width: 1335px) {
+   width:53%;
+  }
 }
