--- a/assets/css/sass/products_list.scss
+++ b/assets/css/sass/products_list.scss
@@ -150,10 +150,15 @@ body {
             box-shadow: 0px 1px 0px 0px #ffffff14 inset;
             padding: 1px;
             overflow: hidden;
-            @media screen and (max-width: 991px) {
-              margin: 30px 10px;
+            @media screen and (max-width: 1199px) {
               border: none;
               padding: 0;
+            }
+            @media screen and (max-width: 991px) {
+              margin: 30px 10px;
+              border-radius: 16px;
+              // border: none;
+              // padding: 0;
             }
 
             &:nth-child(4) {
@@ -197,7 +202,7 @@ body {
                 opacity: 1;
                 pointer-events: none;
 
-                @media screen and (max-width: 991px) {
+                @media screen and (max-width: 1199px) {
                  display: none;
                 }
             }
@@ -236,8 +241,8 @@ body {
                 background: linear-gradient(216deg, rgba(1, 86, 86, 0.86) 0%, rgba(0, 53, 53, 0.85) 30%, rgb(0 17 17 / 83%) 70%);
                 // background: linear-gradient(0deg, rgb(0, 29, 31) 0%, rgba(0, 23, 21, 0.8) 90%);
                 @media screen and (max-width: 1199px) {
-                  padding: 30px 30px 30px 20px;
-                  border-radius: 8px;
+                  padding: 30px 20px 30px 20px;
+                  border-radius: 16px;
                 }
                 img, svg {
                     position: absolute;
@@ -245,9 +250,10 @@ body {
                     right: 6%;
                     height: 70px;
                     @media screen and (max-width: 1199px) {
-                      height: 35px;
+                      position: relative;
                       right: 0%;
-                      width:20%;
+                      width:60px;
+                      margin-bottom: 8px;
                     }
                 }
 
@@ -360,8 +366,10 @@ body {
               object-fit: contain;
 
               @media (max-width: 991px) {
-               width:20px;
-               height: 20px;
+               min-width:20px;
+               width: 20px;
+               height: auto;
+              //  height: 20px;
             }
           }
           h4{
@@ -376,7 +384,7 @@ body {
                 padding-top: 10px;
                 padding-left: 0px;
                 font-size: 16px;
-                line-height: 24px;
+                line-height: 22px;
                 font-weight: 500;
               }
           }
