--- a/assets/css/products_list.css
+++ b/assets/css/products_list.css
@@ -308,22 +308,32 @@ section {
 }
 @media screen and (max-width: 1199px) {
   #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont {
-    padding: 30px 20px 30px 20px;
+    padding: 15px 20px 30px 20px;
     border-radius: 16px;
+  }
+}
+@media screen and (max-width: 991px) {
+  #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont {
+    padding-top: 30px;
   }
 }
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont img, #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont svg {
   position: absolute;
   top: 7%;
   right: 6%;
-  height: 70px;
+  height: 60px;
+  width: 60px;
 }
 @media screen and (max-width: 1199px) {
   #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont img, #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont svg {
     position: relative;
     right: 0%;
-    width: 60px;
-    margin-bottom: 8px;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 991px) {
+  #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont img, #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont svg {
+    margin-bottom: 16px;
   }
 }
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont h4 {
@@ -341,6 +351,7 @@ section {
   #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont h4 {
     font-size: 18px;
     padding-right: 16px;
+    padding-bottom: 8px;
     line-height: 24px;
   }
 }
@@ -1009,6 +1020,7 @@ section {
   background: rgba(0, 30, 32, 0.8);
   background: linear-gradient(216deg, rgba(1, 86, 86, 0.86) 0%, rgba(0, 53, 53, 0.85) 30%, rgba(0, 17, 17, 0.83) 70%);
   margin-bottom: 32px;
+  border: 1px solid #051010;
   transition: border-color 0.6s ease, box-shadow 0.6s ease;
 }
 #fz_product_range #product-range .fz_product-content:hover {
