--- a/assets/css/sass/products_list.scss
+++ b/assets/css/sass/products_list.scss
@@ -241,19 +241,26 @@ body {
                 background: linear-gradient(216deg, rgba(1, 86, 86, 0.86) 0%, rgba(0, 53, 53, 0.85) 30%, rgb(0 17 17 / 83%) 70%);
                 // background: linear-gradient(0deg, rgb(0, 29, 31) 0%, rgba(0, 23, 21, 0.8) 90%);
                 @media screen and (max-width: 1199px) {
-                  padding: 30px 20px 30px 20px;
+                  padding: 15px 20px 30px 20px;
                   border-radius: 16px;
+                }
+                @media screen and (max-width: 991px) {
+                  padding-top: 30px;
                 }
                 img, svg {
                     position: absolute;
                     top: 7%;
                     right: 6%;
-                    height: 70px;
+                    height: 60px;
+                    width:60px;
                     @media screen and (max-width: 1199px) {
                       position: relative;
                       right: 0%;
-                      width:60px;
-                      margin-bottom: 8px;
+                      margin-bottom: 30px;
+                    }
+                    @media screen and (max-width: 991px) {
+                     
+                      margin-bottom: 16px;
                     }
                 }
 
@@ -271,6 +278,7 @@ body {
                     @media (min-width: 992px) and (max-width: 1199px) {
                       font-size: 18px;
                       padding-right: 16px;
+                      padding-bottom: 8px;
                       line-height: 24px;
                  }
                     @media screen and (max-width: 991px) {
@@ -815,6 +823,7 @@ body {
             background: rgba(0, 30, 32, 0.8);
             background:linear-gradient(216deg, rgba(1, 86, 86, 0.86) 0%, rgba(0, 53, 53, 0.85) 30%, rgba(0, 17, 17, 0.83) 70%);
             margin-bottom: 32px;
+            border:1px solid #051010;
             transition: border-color 0.6s ease, box-shadow 0.6s ease;
             &:hover {
               border: 1px solid ;
