--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -40,6 +40,7 @@
   }
   @media screen and (max-width: 991px) {
     padding-bottom: 30px;
+    width:100%;
    }
 
   .logo {
@@ -60,6 +61,7 @@
   }
   @media screen and (max-width: 991px) {
    margin-bottom: 0;
+   width:100%;
    }
   }
 }
