--- a/assets/css/sass/newsletter.scss
+++ b/assets/css/sass/newsletter.scss
@@ -28,8 +28,11 @@
       margin-bottom: 20px;
       padding-top: 15px;
     @media screen and (max-width:991px) {
-      font-size: 30px;
-      line-height: 40px;
+      
+        font-size: 30px;
+        line-height: 40px;
+        padding-top: 5px;
+        margin-bottom: 5px;
      }
     }
     .input-group{
