--- a/assets/css/sass/playstore.scss
+++ b/assets/css/sass/playstore.scss
@@ -45,6 +45,10 @@
             filter: blur(152px);
             transform: translate3d(0, 0, 0);
             z-index: 1;
+
+            @media screen and (max-width:991px) {
+               display: none;
+            }
           }
           &::before {
             content: "";
@@ -58,6 +62,9 @@
             filter: blur(152px);
             transform: translate3d(0, 0, 0);
             z-index: 1;
+            @media screen and (max-width:991px) {
+                display: none;
+             }
           }
           .play_flex {
             justify-content: center;
