--- a/assets/css/sass/product.scss
+++ b/assets/css/sass/product.scss
@@ -107,7 +107,8 @@
             margin-bottom: 0px;
 
             @media screen and (max-width: 1199px) {
-              line-height: 40px;
+              line-height: 30px;
+              border-radius: 30px;
             }
           }
 
