--- a/assets/css/newsletter.css
+++ b/assets/css/newsletter.css
@@ -41,6 +41,8 @@
   .newsletter_section h5 {
     font-size: 30px;
     line-height: 40px;
+    padding-top: 5px;
+    margin-bottom: 5px;
   }
 }
 .newsletter_section .input-group {
